# musictabapp

./: .env.example  .eslintrc.js  .gitignore  FORCE_REFRESH_GUIDE.md  Makefile  README.md  T48_TEST_SUMMARY.md  architecture.md  auto-start.ps1  check-supabase.js  ci.ps1  debug-web-config.html  dev-start.ps1  dev.ps1  docker-compose.redis.yml  fix-rls-artifacts.sql  make.bat  package-lock.json  package.json  pyproject.toml  requirements.txt  setup-supabase.js  start-all-services.ps1  start-dev.ps1  start-services.bat  start-vscode.ps1  t48-mobile-test-dashboard.html  task.md  test-connection-fix.py  test-frontend-api.html  test-simulate.html  test-status-dod.js  test-t48-mobile-web.py  test-transcription-dod.js  test-worker-fix.py  test_celery.py  trigger-existing-job.py  vscode-commands.txt  vscode-dev.ps1
api/: README.md  server.js
apps/mobile/: App.js  app.config.js  app.json  create-test-user.js  package.json  reset-password.js
apps/mobile/app/: _layout.js  index.js  instruments.js  login.js  pdf-viewer.js  reset-password.js  test-realtime.js  test-t48.js  upload.js  youtube.js
apps/mobile/app/auth/: callback.js
apps/mobile/app/config/: orchestrator.js
apps/mobile/app/jobs/: [id].js  index.js
apps/mobile/app/lib/: drumMap.ts  renderMusicXML.ts  validate.ts
apps/mobile/components/: AudioPlayer.js  PDFViewer.js
apps/mobile/contexts/: AuthContext.js
apps/mobile/supabase/: client.ts
docs/: PROMPT.md  demucs-fix-summary.md  environment-setup.md  supabase-cli-setup.md  supabase-setup.md
frontend/: README.md  app.js  index.html  server.js  styles.css
scripts/: analyze-midi.py  check-env.js  check-jobs-schema.js  check-latest-midi.py  check-supabase-cli.js  check-t46-status.js  check_env.py  create-audible-midi.py  create-demo-youtube-task.js  create-final-midi.py  create-real-files.js  create-test-audio.js  create-test-succeeded-job.js  create-working-midi.py  debug-download.js  debug-jobs-api.js  debug-simulate.js  debug-t48-issue.py  demo-complete-user-flow.py  diagnose-supabase.js  final-t47-t48-report.py  fix-user-jobs.js  generate-test-midi.py  install-ffmpeg.bat  install-ffmpeg.ps1  install-ffmpeg.py  list-buckets.ps1  midi-visualizer.py  phase_c_verify_real_user.py  query-jobs.js  query_jobs.py  t48-demucs-success-report.py  test-api-curl.js  test-api-endpoints.js  test-audio-files-dod.js  test-audio-files-table.js  test-demucs-fix.py  test-file-upload.js  test-frontend-dod.js  test-frontend.js  (+63 more)
services/orchestrator/: .env.example  auth.py  celery_client.py  db.py  main.py  pyproject.toml
services/worker/: .env.example  __init__.py  analyze_t49_timing.py  app.py  audio_preprocessor.py  celeryconfig.py  compare_t49_t50.py  drum_detector.py  midi_generator.py  midi_standardizer.py  musicxml_generator.py  pyproject.toml  source_separator.py  tasks.py  test_t47.py  test_t48.py  test_t49.py  test_t49_full_audio.py  test_t49_rolling_deep.py  test_t50.py  transcribe_drums.py  verify_t49_output.py  youtube_downloader.py
sql/: create-artifacts-table.sql  create-indexes.sql  create-job-status-enum.sql  create-jobs-table.sql  create-profiles-table.sql  create-rls-policies.sql  create-service-role-policies.sql  create-stems-table.sql  create-usage-log-table.sql  enable-rls.sql
supabase/: config.toml
supabase/migrations/: 20250815044742_create_users_table.sql  20250815050210_create_audio_files_table.sql  20250815051804_create_transcription_jobs_table.sql
