[tool.poetry]
name = "musictabapp"
version = "0.1.0"
description = "Music transcription app - monorepo root"
authors = ["Music Tab App Team"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.292"
black = "^23.9.1"
pytest = "^7.4.2"

[tool.poetry.scripts]
fmt = "black ."
lint = "ruff check ."
test = "pytest"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.black]
target-version = ['py312']
line-length = 88
