[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "musictabapp-worker"
version = "0.1.0"
description = "Music Tab App Worker Service"
authors = [
    {name = "Music Tab App Team", email = "team@musictabapp.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "celery[redis]>=5.3.0",
    "python-dotenv>=1.0.0",
    "supabase>=2.0.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "yt-dlp>=2023.12.30",
    "ffmpeg-python>=0.2.0",
    "pydub>=0.25.1",
    "librosa>=0.10.0",
    "scipy>=1.11.0",
    "numpy>=1.24.0",
    "mido>=1.3.0",
    "pretty_midi>=0.2.10",
    "music21>=9.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["worker*"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88
